Fixed bugs on my last commit Made the GUI scale better on smaller screens

--- a/src/main/resources/MainMenuStyleSheet.css
+++ b/src/main/resources/MainMenuStyleSheet.css
@@ -2,7 +2,7 @@
     -fx-background-color: #76b5c5;
     -fx-background-radius: 20;
     -fx-pref-width: 300;
-    -fx-pref-height: 100;
+    -fx-pref-height: 80;
 
     -fx-text-fill: #000;
     -fx-font-weight: bold;
@@ -13,7 +13,7 @@
     -fx-background-color: #4473c9;
     -fx-background-radius: 20;
     -fx-pref-width: 300;
-    -fx-pref-height: 100;
+    -fx-pref-height: 80;
 
     -fx-text-fill: #000;
     -fx-font-weight: bold;
@@ -38,7 +38,7 @@
 
 /* Custom Title Bar */
 .title-bar {
-    -fx-background-color: #2a2a2a; /* Dark header */
+    -fx-background-color: #0c1f28; /* Dark header */
     -fx-padding: 5px 10px;
     -fx-alignment: center;
 }
